--- a/style.css
+++ b/style.css
@@ -4,12 +4,19 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Josefin Sans', sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
 .background-image {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   height: 350px;
+  z-index: -1;
 }
 
 .background-image img {
@@ -17,5 +24,13 @@
   height: 100%;
   object-fit: cover;
   object-position: left;
+}
+
+.container {
+  width: 100%;
+  max-width: 700px;
+  margin: 0px;
+  border: 1px solid red;
+  margin-top: 100px;
 }
 
