--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ body {
   border: 2px solid hsl(237, 14%, 26%);
   cursor: pointer;
   transition: all 0.25s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .check-mark:hover {
@@ -98,5 +101,24 @@ body {
 
 .new-todo-input input::placeholder {
   color: hsl(233,14%, 35%);
+}
+
+.todo-item {
+  width: 100%;
+  display: flex;
+  height: 70px;
+  border-bottom: 1px solid hsl(237, 14%, 26%);
+}
+
+.todo-text {
+  display: flex;
+  align-items: center;
+  color: hsl(234, 39%, 85%);
+  font-size: 18px;
+}
+
+.todo-items-wrapper {
+  margin-top: 30px;
+  background-color: hsl(233, 14%, 35%);
 }
 
